--- a/docker-compose.mac-m3.yml
+++ b/docker-compose.mac-m3.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   open-avatar-chat-mac-m3:
@@ -32,6 +32,8 @@ services:
       - MALLOC_ARENA_MAX=4
       # Display support for macOS
       - DISPLAY=host.docker.internal:0
+      # API Keys
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8282/health"]
@@ -43,10 +45,10 @@ services:
       resources:
         limits:
           memory: 16G
-          cpus: '8.0'
+          cpus: "8.0"
         reservations:
           memory: 8G
-          cpus: '4.0'
+          cpus: "4.0"
     networks:
       - avatar-chat-network
 
